add AI phân tích hình ảnh gợi ý sản phẩm